[gd_scene load_steps=4 format=3 uid="uid://ch6tbqewvgtb5"]

[ext_resource type="Script" uid="uid://r4du2tikrnpf" path="res://level/level.gd" id="1_7lnir"]
[ext_resource type="PackedScene" uid="uid://dtte1hfvnljl4" path="res://card/card.tscn" id="2_5gx2l"]
[ext_resource type="PackedScene" uid="uid://bn2sqocpkdasq" path="res://level/ui/level_ui.tscn" id="3_qohg2"]

[node name="Level" type="Node"]
script = ExtResource("1_7lnir")

[node name="Hand" type="Node2D" parent="."]
position = Vector2(54, 110)

[node name="Card0" parent="Hand" instance=ExtResource("2_5gx2l")]
unique_name_in_owner = true

[node name="LabelHeld0" type="Label" parent="Hand/Card0"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -14.0
offset_right = 32.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "HELD"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Card1" parent="Hand" instance=ExtResource("2_5gx2l")]
unique_name_in_owner = true
position = Vector2(27, 0)

[node name="LabelHeld1" type="Label" parent="Hand/Card1"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -14.0
offset_right = 32.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "HELD"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Card2" parent="Hand" instance=ExtResource("2_5gx2l")]
unique_name_in_owner = true
position = Vector2(54, 0)

[node name="LabelHeld2" type="Label" parent="Hand/Card2"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -14.0
offset_right = 32.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "HELD"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Card3" parent="Hand" instance=ExtResource("2_5gx2l")]
unique_name_in_owner = true
position = Vector2(81, 0)

[node name="LabelHeld3" type="Label" parent="Hand/Card3"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -14.0
offset_right = 32.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "HELD"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Card4" parent="Hand" instance=ExtResource("2_5gx2l")]
unique_name_in_owner = true
position = Vector2(108, 0)

[node name="LabelHeld4" type="Label" parent="Hand/Card4"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -14.0
offset_right = 32.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "HELD"
horizontal_alignment = 1
vertical_alignment = 2

[node name="LevelUI" parent="." instance=ExtResource("3_qohg2")]
unique_name_in_owner = true
